--- a/tools/simulator/data/config/ai/default_state.yml
+++ b/tools/simulator/data/config/ai/default_state.yml
@@ -1,29 +1,18 @@
-# Pipe Align
+# Torps
 ram.ai.new.mainState.Body:
   states:
     start:
       type: Start
-    site:
-      type: SonarManipTask
+    forward:
+      type: TorpedoTask
       init:
-        siteSearchDistance: 3
-        boxX: 1.5
-        boxY: 1.5
-        duration: 300
+        configNode: {}
+        success: 'end'
+        failure: 'end'
+        duration: 10000
     end:
       type: End
 
-    pogo:
-      type: PogoTask
-      init:
-        pogoHeight: 1.2
-        pogoWidth: 1.2
-        pogoShift: .15
-        pogoShiftV: .45
-        attackHeight: 11.9
   transitions:
-    - [start, next, site]
-    - [site, success, pogo]
-    - [site, failure, end]
-    - [pogo, success, end]
-    - [pogo, failure, end]
+    - [start,   next, forward]
+    - [forward, success, end ]
